修正(BE): 告知SURVEYを既定1問(自由記述)＋即公開で回答可能にする
告知ウィザードのSURVEYチャネルが設問ゼロのDRAFTで作成され、
isAcceptingResponses()がPUBLISHED＋設問必須のため「告知したのに回答不可」
だった矛盾を根治する。

- SurveyAnnouncementAdapter.createContent を改修:
  - 自由記述(FREE_TEXT・任意回答)の既定設問1問を同梱してcreateSurvey
  - 作成直後にpublishSurveyでPUBLISHED化(設問1件ありNO_QUESTIONS通過)
  - publish失敗は握りつぶさず伝播(broadcast全体ロールバック)
- 既定設問タイトルはBE生成のため既定ロケール(ja)でハードコード
  (i18n follow-upコメント明記)
- closesAt無し(無期限)でも公開可であることを確認
- 単体テストをAC-1〜4で刷新(既定設問1問/publish順序/closesAt公開/回答受付)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>